sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  for (int i <- 1 to getNombreValeurs()){
    if (!plusPetit(i, i+1)){
      echange(i,i+1)
      i = 0
    }
  }
}